# inventory

./: .gitignore  README.md  The Idea.txt  User-Stories.docx  company.db  crud.py  fill.py  inventory.db  items.md  main.py  model.py  protocol.md  requirements.txt  setup.cfg  userstory_00.md  userstory_01.md  userstory_02.md  userstory_05.md  userstory_06.md  userstory_07.md  whitelist.txt
InventoryWebsite/: db.sqlite3  manage.py
InventoryWebsite/InventoryWebsite/: asgi.py  settings.py  urls.py  wsgi.py
InventoryWebsite/company/: models.py  urls.py  views.py
InventoryWebsite/company/templates/: home.html
InventoryWebsite/company/templates/company/: company_list.html
InventoryWebsite/polls/migrations/: 0001_initial.py
User Stories/: userstory_00.md  userstory_01.md  userstory_02.md  userstory_03.md  userstory_04.md  userstory_05.md  userstory_06.md  userstory_07.md  userstory_08.md
inventory/: main.py
