[metadata]
name = inventory 
author = Philipp Lorber
author_email = lorber190103@sr.htlweiz.at
description = inventory for company
version = 1.0.0
url = https://github.com
keywords =
  logging
  file
  output
  input

license_file =
  LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires =
	sqlalchemy
  faker
  flake8
  flake8-spellcheck
  flake8-builtins
  flake8-import-order